# BuildYourProject-back

./: README.md  pyproject.toml
backend/: .gitignore  Procfile  db.sqlite3  pyproject.toml  requirements.txt  tests.py
backend/api/: models.py  permissions.py  responses.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
backend/api/analytics/: analisador_desempenho.py  sistema_sugestoes.py
backend/api/migrations/: 0001_initial.py  0002_project_type.py  0003_alter_project_created_at.py  0004_project_template.py
backend/api/ml/: predictor.py  sugestoes.py
backend/api/utils/: metricas_projeto.py  ml_metrics.py
backend/api/views/: analise_inteligente_views.py  authentication_views.py  google_views.py  project_views.py  task_views.py  utility_views.py
backend/config/: celery.py  middleware.py  settings.py  urls.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: api.js
frontend/src/auth/: ProtectedRoute.jsx
frontend/src/components/: CreateProjectCard.jsx  Exemplo.jsx  Header.jsx  Logout.jsx  ModalNewProject.jsx  ModalNewTask.jsx  ProjectCard.jsx  ProjectCardItem.jsx  Sidebar.jsx  ViewProject.jsx
frontend/src/mocks/: abntMock.jsx
frontend/src/pages/: Home.jsx  Landing.jsx  Login.jsx  Register.jsx
frontend/src/styles/: CreateProjectCard.css  Header.css  Home.css  Landing.css  LoginCadastro.css  Main.css  ModalNewProject.css  ModalNewTask.css  ProjectCard.css  ProjectCardItem.css  Sidebar.css  ViewProject.css
frontend/src/translate/: i18n.js
(+3 files in other folders)
